removed upload fields now unused
